--- a/ExchangeRate/style.css
+++ b/ExchangeRate/style.css
@@ -43,7 +43,7 @@
   .top {
     position: relative;
     padding: 3em 0;
-    background-image: url("../img/topMobile.jpg");
+    background-image: url("./img/topMobile.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -70,7 +70,7 @@
   
   @media screen and (min-width: 992px) {
     .top {
-      background-image: url("../img/topMobile.jpg");
+      background-image: url("./img/topMobile.jpg");
     }
   }
   
